# KursProjectFomina

./: CMakeLists.txt
src/: CMakeLists.txt  library_scanner.cpp  library_scanner.h  main.cpp
tests/: CMakeLists.txt  test_scanner.cpp
